# near-bootcamp-project

./: README.md
smart-contract/: Cargo.toml  README.md  USAGE.md  args.sh
smart-contract/src/: chat.rs  lib.rs
