[package]
  authors = ["0xdev8 <github.com/ahmedali8>"]
  edition = "2021"
  name = "chat-app-smart-contract"
  version = "0.1.0"

[dependencies]
  near-sdk = "4.1.1"

[lib]
  crate-type = ["cdylib"]

[profile.release]
  codegen-units = 1
  debug = false
  lto = true
  opt-level = "z"
  overflow-checks = true
  panic = "abort"
